[package]
name = "yart"
version = "0.2.0-alpha"
authors = ["Nikolaos Georgiou <nikolaos.georgiou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "~0.8"

[dependencies.clap]
version = "~3.2.4"
default-features = false
features = ["std"]
